feat: complete tags registry
update double plant behavior
update recipe requirement